# 4de89279943ea0e42ef94b23123347ac714c2e6b47774d13be052f8c7e4031ab_foreign_student_placement

./: .gitignore  .pre-commit-config.yaml  .yamlignore  README.md  README_MLFLOW.md  pyproject.toml
deploy/airflow/: Dockerfile  Dockerfile.airflow  docker-compose.yml  requirements.txt
deploy/airflow/dags/: ml_pipeline_dag.py  mlflow_pipeline_dag.py
deploy/docker/: .dockerignore  Dockerfile
notebooks/: base.ipynb  hash.ipynb
scripts/: setup_mlflow.sh  start_mlflow_ui.bat  start_mlflow_ui.sh
src/: data_preprocessing.py  drift_detection.py  evaluation.py  feature_engineering.py  mlflow_config.py  model_training.py  run_pipeline.py  run_pipeline_mlflow.py  simple_drift_detection.py  visualization.py
tests/: test_data_preprocessing.py  test_ml_pipeline.py
