[project]
name            = "demo"
version         = "0.1.0"
description     = "Add your description here"
readme          = "README.md"
requires-python = ">=3.12"

# your runtime dependencies
dependencies = [
  "pandas>=2.1",
  "scikit-learn>=1.2,<2.0",
  "joblib>=1.2,<2.0",
  "seaborn>=0.12.0",
  "matplotlib>=3.7.0",
  "mlflow>=2.8.0",
  "evidently>=0.4.0"
]

# optional extras (e.g. for tests, linting, etc.)
[project.optional-dependencies]
dev = [
  "pytest>=7.2,<8.0",
  "pre-commit",
  "black",
  "ruff",
  "jupyterlab"
]

# expose your run_pipeline entry point as a CLI
[project.scripts]
run-pipeline = "ml_pipeline.run_pipeline:main"

# Tell setuptools where to find your code under src/
[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires    = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
